# celery-quart

./: .env.local  .gitignore  Dockerfile  README.md  alembic.ini  app.py  compose.yaml  pyproject.toml  streaming_protocol.md
alembic/: env.py
alembic/versions/: aeb5c67904d5_initial_database_creation.py
client/: .prettierrc  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  types.d.ts
client/src/api/: chat.ts
client/src/store/: ChatProvider.tsx  hooks.ts  models.ts  state.ts
scripts/: ollama_prompt.py
src/: commands.py  create_app.py  create_worker.py  logging.py  store.py
src/api/: __init__.py  background.py  routes.py  streaming.py
src/flow/: __init__.py  generator.py  types.py
src/storage/: __init__.py  base.py  models.py
src/templates/: chat.html  home.html  response.html  response_poll.html
src/templates/layout/: base.html
src/worker/: __init__.py  tasks.py
static/: styles.css
